--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -10,6 +10,7 @@ jobs:
         steps:
           - name: pulling
             run: |
+              echo $GITHUB_REPOSITORY
               git clone git@github:$GITHUB_REPOSITORY
               git checkout $GITHUB_SHA
           - name: testing
