--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -11,7 +11,7 @@ jobs:
           - name: pulling
             run: |
               echo $GITHUB_REPOSITORY
-              git clone git@github:$GITHUB_REPOSITORY
+              git clone https://github.com/$GITHUB_REPOSITORY
               git checkout $GITHUB_SHA
           - name: testing
             run: ls -al
