--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -11,6 +11,7 @@ jobs:
           - name: pulling
             run: |
               echo $GITHUB_REPOSITORY
+              echo "https://github.com/$GITHUB_REPOSITORY.git"
               git clone https://github.com/$GITHUB_REPOSITORY.git
               git checkout $GITHUB_SHA
           - name: testing
